--- a/students-list/package.json
+++ b/students-list/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "learnyounode": "^3.5.10",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "readline-sync": "^1.4.10"
   }
 }
